src/test/ui/issues/issue-24013.stderr
error[E0284]: type annotations needed
  --> $DIR/issue-24013.rs:5:20
   |
LL |     unsafe {swap::<&mut _>(transmute(&a), transmute(&b))};
   |                    ^^^^^^ cannot infer type
   |
   = note: required so that reference `&mut _` does not outlive its referent

error: aborting due to previous error

For more information about this error, try `rustc --explain E0284`.
